# ModelScope-visual-understanding-MCP

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
config/: models.example.yaml  models.yaml
docs/: hermes-install.md
docs/prd/: README.md
docs/prd/v0.1.0/: changelog.md  decisions.md  dev.md  plan.md  prd.md  progress.md  release.md  spec.md
patches/: hermes-mcp-dedupe.patch
prompts/: vision_reverse_prompt.zh.md
scripts/: run-server.sh
skills/modelscope-vision/: SKILL.md
src/modelscope_vision_mcp/: __init__.py  client.py  config.py  errors.py  output.py  portability_check.py  prompts.py  selector.py  server.py  smoke_test.py  state.py
tests/: test_client.py  test_config.py  test_models_config.py  test_output.py  test_portability_check.py  test_selector.py  test_server.py  test_state.py
