[project]
name = "modelscope-vision-mcp"
version = "0.1.0"
description = "Hermes ModelScope vision recognition MCP"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
  "openai>=1.0.0",
  "pillow>=10.0.0",
  "pydantic>=2.0.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
modelscope-vision-mcp = "modelscope_vision_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
